# app/Http/Controllers/Controller.php
@@ -374,6 +374,52 @@ use Illuminate\Routing\Controller as BaseController;
  *        )
  *     )
  * ),
+ * 
+ * 
+ * @OA\Get(
+ * path="/API-Corelease/api/master_university/{PROVINCE_ID}",
+ * summary="Master Data มหาวิทยาลัย",
+ * description="มหาวิทยาลัย",
+ * operationId="master_university",
+ * tags={"API University"},
+ * @OA\Parameter(
+ *     name="PROVINCE_ID",
+ *     in="path",
+ *     description="รหัสจังหวัด เช่น 10",
+ *     required=true,
+ * ),
+ * @OA\Response(
+ *    response=422,
+ *    description="Wrong credentials response",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="message", type="string", example="Sorry, wrong Data. Please try again")
+ *        )
+ *     )
+ * ),
+ * 
+ * @OA\Post(
+ * path="/API-Corelease/api/master_university",
+ * summary="Master Data มหาวิทยาลัย",
+ * description="มหาวิทยาลัย",
+ * operationId="Post-master_university",
+ * tags={"API University"},
+ * @OA\RequestBody(
+ *    required=false,
+ *    description="PROVINCE_ID, DISTRICT_ID",
+ *    @OA\JsonContent(
+ *       required={"PROVINCE_ID","DISTRICT_ID"},
+ *       @OA\Property(property="PROVINCE_ID", type="integer", example=10),
+ *       @OA\Property(property="DISTRICT_ID", type="integer", example=null),
+ *    ),
+ * ),
+ * @OA\Response(
+ *    response=422,
+ *    description="Wrong credentials response",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="message", type="string", example="Sorry, wrong Data. Please try again")
+ *        )
+ *     )
+ * )
  */
 
 class Controller extends BaseController
