# routes/api.php
@@ -60,3 +60,8 @@ Route::get('/master_province', [API_MT_Controller::class, 'MT_PROVINCE']);
 Route::get('/master_district/{PROVINCE_ID}', [API_MT_Controller::class, 'MT_DISTRICT']);
 
 Route::get('/master_sub_district/{DISTRICT_ID}', [API_MT_Controller::class, 'MT_SUB_DISTRICT']);
+
+
+Route::get('/master_university/{PROVINCE_ID?}', [API_MT_Controller::class, 'MT_UNIVERSITY']);
+
+Route::post('/master_university', [API_MT_Controller::class, 'POST_MT_UNIVERSITY']);
